# MADS-ML-Graduation_Project_Bovemij

./: .dockerignore  Dockerfile  README.md  pyproject.toml
data/processed/: aggregated_export_insurance_portfolio_data_forecasting_2015_2025.csv  detailed_backtest_2024.csv  detailed_backtest_2025.csv  forecast_results_2026.csv
data/processed/regression/: export_insurance_portfolio_data_forecasting_2015_2025_enriched.csv  export_insurance_portfolio_data_forecasting_2015_2025_feature_engineering.csv
data/processed/timeseries/: aggregated_export_insurance_portfolio_data_forecasting_2015_2025.csv  aggregated_export_insurance_portfolio_data_forecasting_2015_2025_with_cbs_autoverkopen.csv  forecast_results_2026.csv
data/raw/: export_insurance_portfolio_data_forecasting_2000_2025.csv
notebooks/regression/: eda regression model - distributions and correlations.ipynb  eda regression model - feature engineering.ipynb  eda regression model - merge external data.ipynb  eda regression model.ipynb
notebooks/timeseries/: eda timeseries 2000-2025.ipynb  eda timeseries 2015-2025.ipynb  eda timeseries v3.ipynb  model timeseries all targets 2026.ipynb  model timeseries newbusiness.ipynb  model timeseries prolongaties.ipynb  model timeseries royementen.ipynb
notebooks/timeseries/archive/: eda timeseries v2.ipynb  eda timeseries.ipynb
src/: main.py
